20100221 generate.pl.in,libspectrum.h.in,make-perl.c: WIN32_DLL
         [__declspec(dllexport)] should be before the return type in
         declarations, rather than between return type and function name (part
         of patch #2533274) (Simon Owen).
20100221 internals.h: define __func__ in MSVC (part of patch #2533274) (Simon
         Owen).
20100221 internals.h: define M_LN2 for use with non C99 math.h (part of patch
         #2533274) (Simon Owen).
20100222 make-perl.c: VC6 has __int64 instead of long long (Fred; thanks, Simon
         Owen).
20100526 tape_block.c: declare libspectrum_bits_set_n_bits static as it isn't
         used outside its file to silence a warning on LLVM 4.2 (Fred).
20100711 doc/libspectrum.txt: fix a typo in libspectrum_rzx_start_input (Fred).
20100825 libspectrum.c,libspectrum.h.in,sna.c,szx.c,timings.c,z80.c:
         reintegrate NTSC Spectrum branch.
20100831 szx.c: add SZX read support for NTSC Spectrum machine ID (Fred).
20100912 rzx.c: don't log error message when encountering an external snapshot
         (common in competition mode rzx files made by Spectaculator) (patch
         #3054536) (Sergio Baldovi).
20100912 Makefile.am,configure.in,windres.rc: add Windows version encoding
         similar to Fuse (patch #3061430) (Sergio Baldovi).
20100929 test/test.c,z80.c: ensure last OUT to 0x1ffd is serialised into .z80
         files (fixes bug #3078262; thanks, Nick Corey).
20100930 test/plus3.z80: remember to add test file.
20100930 ChangeLog,README: first updates for a "1.0" release.
20101002 configure.in,szx.c,test/{empty.szx,test.c}: check for SZX files
         written with A and F swapped and read them in appropriately. Bump
         libspectrum version number so we know that new files are written
         without the bug.
20101003 szx.c,test/{empty.szx,test.c}: we also need to swap A' and F'.
20101010 configure.in: pad version number for Win32 if needed (patch #3084574)
         (Sergio Baldovi).