@@ -787,3 +787,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20101003 szx.c,test/{empty.szx,test.c}: we also need to swap A' and F'.
 20101010 configure.in: pad version number for Win32 if needed (patch #3084574)
          (Sergio Baldovi).
+20101130 warajevo_read.c: remove potential signedness problem.
